docs/envoy/v1.18.2/_sources/api-v3/extensions/filters/network/thrift_proxy/router/v3/router.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/thrift_proxy/router/v3/router.proto:

Router
======


.. _extension_envoy.filters.thrift.router:

This extension may be referenced by the qualified name *envoy.filters.thrift.router*

.. note::
  

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.thrift_proxy.filters <extension_category_envoy.thrift_proxy.filters>`

Thrift router :ref:`configuration overview <config_thrift_filters_router>`.

.. _envoy_v3_api_msg_extensions.filters.network.thrift_proxy.router.v3.Router:

extensions.filters.network.thrift_proxy.router.v3.Router
--------------------------------------------------------

`[extensions.filters.network.thrift_proxy.router.v3.Router proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/extensions/filters/network/thrift_proxy/router/v3/router.proto#L16>`_




