docs/envoy/v1.23.9/_sources/api-v3/extensions/filters/network/thrift_proxy/router/v3/router.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/thrift_proxy/router/v3/router.proto:

Router (proto)
==============




.. _extension_envoy.filters.thrift.router:

This extension has the qualified name ``envoy.filters.thrift.router``

.. note::
  

  This extension is not hardened and should only be used in deployments
  where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.thrift_proxy.filters <extension_category_envoy.thrift_proxy.filters>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.filters.network.thrift_proxy.router.v3.Router <envoy_v3_api_msg_extensions.filters.network.thrift_proxy.router.v3.Router>`



Thrift router :ref:`configuration overview <config_thrift_filters_router>`.

.. _envoy_v3_api_msg_extensions.filters.network.thrift_proxy.router.v3.Router:

extensions.filters.network.thrift_proxy.router.v3.Router
--------------------------------------------------------

:repo:`[extensions.filters.network.thrift_proxy.router.v3.Router proto] <api/envoy/extensions/filters/network/thrift_proxy/router/v3/router.proto#L19>`


.. code-block:: json
  :force:

  {
    "close_downstream_on_upstream_error": {...}
  }

.. _envoy_v3_api_field_extensions.filters.network.thrift_proxy.router.v3.Router.close_downstream_on_upstream_error:

close_downstream_on_upstream_error
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Close downstream connection in case of routing or upstream connection problem. Default: true
  
  

